# firefly-bitsy

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  firefly.toml  main.bitsy.txt  tmp.rs
src/: dialog.rs  main.rs  rendering.rs  state.rs  updating.rs
