[package]
name = "firefly-bitsy"
version = "0.1.0"
edition = "2024"

[dependencies]
bitsy-file = { path = "/home/gram/my/bitsy-nostd-parser" }
firefly-rust = { path = "../firefly-rust", features = ["alloc", "talc"] }
bitsy-script = { path = "/home/gram/my/bitsy-script" }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
