[package]
name = "firefly-bitsy"
version = "0.1.1"
edition = "2024"

[dependencies]
bitsy-file = "0.712.1"
firefly-rust = { version = "0.10.0", features = ["alloc", "talc"] }
bitsy-script = "0.2.1"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
